k8s-manifests/overlays/uat/superapp/client/ips/patch/uat-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ips
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ips
        image: superapp-registry.cbe.com.et:5000/cbe-superapp/ips-uat:latest
        imagePullPolicy: Always
